--- a/public/5-tips-to-drive-greener-and-feel-better/index.html
+++ b/public/5-tips-to-drive-greener-and-feel-better/index.html
@@ -33,7 +33,7 @@
 <div class="wp-block-getwid-advanced-heading"><span class="wp-block-getwid-advanced-heading__content" style="text-align:center"><strong><em>It’s rather easy to reduce your carbon footprint when you’re behind the wheel. It will help you feel better and your wallet will thank you.</em> </strong></span></div>
 
 
-<div class="wp-bootstrap-blocks-row row align-items-center row-reverse">
+<div class="wp-bootstrap-blocks-row row align-items-center">
 	
 
 <div class="col-12 col-md-6">
@@ -101,7 +101,7 @@
 </div>
 
 
-<div class="wp-bootstrap-blocks-row row align-items-center row-reverse">
+<div class="wp-bootstrap-blocks-row row align-items-center">
 	
 
 <div class="col-12 col-md-6">
