--- a/public/greece-toll-roads-abroad-driving-everything-you-need-to-know/index.html
+++ b/public/greece-toll-roads-abroad-driving-everything-you-need-to-know/index.html
@@ -41,7 +41,7 @@
 <p><strong>Greece has a ramified system of 9 toll highways</strong>. They significantly reduce travel time to almost any part of the country.</p>
 
 
-<div class="wp-bootstrap-blocks-row row row-reverse align-items-center">
+<div class="wp-bootstrap-blocks-row row align-items-center">
 	
 
 <div class="col-12 col-md-6">
@@ -117,7 +117,7 @@
 </div>
 
 
-<div class="wp-bootstrap-blocks-row row row-reverse align-items-center">
+<div class="wp-bootstrap-blocks-row row align-items-center">
 	
 
 <div class="col-12 col-md-6">
@@ -189,7 +189,7 @@
 </div>
 
 
-<div class="wp-bootstrap-blocks-row row row-reverse align-items-center">
+<div class="wp-bootstrap-blocks-row row align-items-center">
 	
 
 <div class="col-12 col-md-6">
@@ -257,7 +257,7 @@
 </div>
 
 
-<div class="wp-bootstrap-blocks-row row row-reverse align-items-center">
+<div class="wp-bootstrap-blocks-row row align-items-center">
 	
 
 <div class="col-12 col-md-6">
@@ -325,7 +325,7 @@
 </div>
 
 
-<div class="wp-bootstrap-blocks-row row row-reverse align-items-center">
+<div class="wp-bootstrap-blocks-row row align-items-center">
 	
 
 <div class="col-12 col-md-6">
