--- a/public/save-with-our-member-discount/index.html
+++ b/public/save-with-our-member-discount/index.html
@@ -29,10 +29,10 @@
 /static/da5427cd8b21d70cb4e89c5e0c37419f/7d509/postimg1.jpg 720w,
 /static/da5427cd8b21d70cb4e89c5e0c37419f/14b42/postimg1.jpg 800w" sizes="(max-width: 800px) 100vw, 800px" /><img loading="lazy" sizes="(max-width: 800px) 100vw, 800px" srcset="/static/da5427cd8b21d70cb4e89c5e0c37419f/e2788/postimg1.jpg 360w,
 /static/da5427cd8b21d70cb4e89c5e0c37419f/7d509/postimg1.jpg 720w,
-/static/da5427cd8b21d70cb4e89c5e0c37419f/14b42/postimg1.jpg 800w" src="/static/da5427cd8b21d70cb4e89c5e0c37419f/14b42/postimg1.jpg" alt="" style="position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center"/></picture></noscript></div></div></div><div class="entry-content post-content row"><div class="wp-bootstrap-blocks-row row row-reverse">
+/static/da5427cd8b21d70cb4e89c5e0c37419f/14b42/postimg1.jpg 800w" src="/static/da5427cd8b21d70cb4e89c5e0c37419f/14b42/postimg1.jpg" alt="" style="position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center"/></picture></noscript></div></div></div><div class="entry-content post-content row"><div class="wp-bootstrap-blocks-row row">
 	
 
-<div class="col-12 col-md-6">
+<div class="col-12 col-md-6 align-items-center">
 			
 
 <p><a href="http://www.volta4u.com">Greece </a>is hands-down one of the best destinations in Europe – if not the world – for a road trip!</p>
@@ -119,7 +119,7 @@
 </div>
 
 
-<div class="wp-bootstrap-blocks-row row">
+<div class="wp-bootstrap-blocks-row row align-items-center">
 	
 
 <div class="col-12 col-md-6">
@@ -185,7 +185,7 @@
 </div>
 
 
-<div class="wp-bootstrap-blocks-row row row-reverse">
+<div class="wp-bootstrap-blocks-row row align-items-center">
 	
 
 <div class="col-12 col-md-6">
